--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: 14px;
     line-height: 1.75rem;
 }
 
@@ -8,7 +8,61 @@ ul {
     list-style:circle;
 }
 
-.button-link {
+h1 {
+    padding-top: 6rem;
+}
+
+@media(max-width: 767px) {
+    h1 {
+        padding-top: 2rem;
+    }  
+}
+
+nav{
+    background-color: #F0E68C;
+    padding: 2px;
+  }
+  
+  nav ul{
+    list-style-type: none;
+    display: inline;
+    font-family: arial;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 60px;
+  }
+
+  nav a{
+    color: black;
+    text-decoration: none;
+  }
+
+  @media (max-width: 767px){
+    nav ul{
+      display: block;
+    }
+    nav li{
+      margin: auto;
+      padding: 10px;
+      text-align: center;
+    }
+    .sticky{
+      position: relative;  
+    }
+    
+  }
+
+@media (min-width: 768px){
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+}
+
+
+  .button-link {
     padding: 4px;  
     border: 1px solid black;  
 }
@@ -17,8 +71,8 @@ ul {
 border-radius: 1rem;
 }
 
-table {
-border: 1px solid #ff0000;
+.rating {
+border: 4px solid #BDB76B;
 font-family: 'Courier New', Courier, monospace;
 }
 
