--- a/main.css
+++ b/main.css
@@ -178,10 +178,6 @@ hr {
   box-shadow: none;
 }
 
-#accordionGenres .card {
-  border-color: black;
-}
-
 #accordionGenres .card-header {
   background-color: transparent;
   border-bottom: none;
@@ -189,10 +185,6 @@ hr {
 
 #accordionCountries .btn:focus {
   box-shadow: none;
-}
-
-#accordionCountries .card {
-  border-color: black;
 }
 
 #accordionCountries .card-header {
@@ -215,12 +207,7 @@ hr {
   border-color: #6dc358 !important;
 }
 
-#accordionGenres .card-header {
-  background-repeat: no-repeat;
-  background-position: right -100px top 0;
-}
-
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
     #accordionGenres .card-header {
       background-position: right -50px top 0;
     }
@@ -230,18 +217,63 @@ hr {
     #accordionGenres .card-header {
       background-position: right 0 top 0;
     }
-  }
-
+  } */
+/* 
   @media only screen and (max-width: 768px) {
     #accordionGenres .card-header {
-      background-image: none;
+      background-image: none; */
     }
   }
 
-#genreOne {
+#accordionGenres .card-header {
+    background-repeat: no-repeat;
+    background-position: right -100px top 0;
+}
+
+#accordionGenres .card {
+    border-color: #575757;
+  }
+
+#genreAutobiography {
   background-image: url("/images/pattern-1.png");
 }
 
-#genreTwo {
+#genreBiography {
   background-image: url("/images/pattern-2.png");
+}
+
+#genreChildrensFiction {
+    background-image: url("/images/pattern-1.png");
+  }
+  
+  #genreHistoricalFiction {
+    background-image: url("/images/pattern-2.png");
+  }
+
+  #genreRealisticFiction {
+    background-image: url("/images/pattern-1.png");
+  }
+  
+  #genreScienceFiction {
+    background-image: url("/images/pattern-2.png");
+  } 
+
+  #genreChildrensPoetry {
+    background-image: url("/images/pattern-1.png");
+  }
+
+  /* #accordionCountries .card-header {
+    background-repeat: no-repeat;
+    background-position: right -100px top 0;
+} */
+
+#accordionCountries .card {
+    border-color: #575757;
+  }
+
+#accordionCountries .card-header {
+    background-color: #f2f2f2;
+    opacity: 0.8;
+    background-image:  linear-gradient(#d9d9d9 0.9px, transparent 0.9px), linear-gradient(to right, #d9d9d9 0.9px, #f2f2f2 0.9px);
+    background-size: 18px 18px;
 }
